Fixed margin on "Get App" buttons
There was margin on the images used for the get-app buttons, which was causing extra white space around the anchor tag of the button in which the pointer was changing to the pointing hand. Removed the margin from the images, and placed it back on the anchor tag to eliminate that extra "pointer" space.

--- a/ig-clone-styles.css
+++ b/ig-clone-styles.css
@@ -310,9 +310,12 @@ a:active {
     display: flex;
 }
 
+#get-app-ctr a {
+    margin: 1em .25em .5em;
+}
+
 #get-app-ctr div img {
     height: 2.5em;
-    margin: 1em .25em .5em;
 }
 
 /* ---------- FOOTER DECLERATIONS ---------- */
